--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
 		name="description"
 		content="Web site created using create-react-app"
 	/>
-	<title>React App</title>
+	<title>Med Pharm</title>
+	<script src="https://kit.fontawesome.com/5dcc6d6cb9.js" crossorigin="anonymous"></script>
 </head>
 <body>
-	<noscript>You need to enable JavaScript to run this app.</noscript>
 	<div id="root"></div>
 </body>
 </html>
